indexer
- finish indexer for fishes
  - mongodb
  - shared model for entity and dto
  - model works for json and bson
